<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription, UseCompoundDrawables, UselessParent">

    <data class=".AdvSettingViewBinding">
        <import type="android.view.View" />
        <variable
            name="vm"
            type="com.aiunion.aidesk.viewmodel.AdvSettingViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/backgroud_corner"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:gravity="center"
                    android:text="非工程人員請勿隨意設定"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:gravity="center"
                    android:text="@string/title_camera_0"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/field_camera_facing"
                        android:textSize="16sp"
                        android:layout_marginEnd="10dp"/>

                    <RadioGroup
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="@={vm.mIsCheckFacingBack}"
                            android:onClick="@{()->vm.radioRgdCameraFacingClick()}"
                            android:textSize="16sp"
                            android:text="@string/option_camera_back" />

                        <RadioButton
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="@={vm.mIsCheckFacingFront}"
                            android:onClick="@{()->vm.radioRgdCameraFacingClick()}"
                            android:textSize="16sp"
                            android:text="@string/option_camera_front" />

                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/field_display_orientation"
                        android:textSize="16sp"
                        android:layout_marginEnd="10dp"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="2"
                        android:ellipsize="end"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="3"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={vm.mOrientation}"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/field_face_orientation"
                        android:textSize="16sp"
                        android:layout_marginEnd="10dp"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="2"
                        android:ellipsize="end"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="3"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={vm.mDetectOrientation}"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/field_bitmap_orientation"
                        android:textSize="16sp"
                        android:layout_marginEnd="10dp"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="2"
                        android:ellipsize="end"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="3"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={vm.mRotate}"/>

                </LinearLayout>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:switchPadding="40dp"
                    android:text="@string/field_need_scale"
                    android:textColor="@color/dark_grey"
                    android:checked="@={vm.mIsNeedScale}"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:gravity="center"
                    android:text="@string/title_camera_1"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/field_camera_facing"
                        android:textSize="16sp"
                        android:layout_marginEnd="10dp"/>

                    <RadioGroup
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="@={vm.mIsCheckFacingIrBack}"
                            android:onClick="@{()->vm.radioIrCameraFacingClick()}"
                            android:textSize="16sp"
                            android:text="@string/option_camera_back" />

                        <RadioButton
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="@={vm.mIsCheckFacingIrFront}"
                            android:onClick="@{()->vm.radioIrCameraFacingClick()}"
                            android:textSize="16sp"
                            android:text="@string/option_camera_front" />

                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/field_display_orientation"
                        android:textSize="16sp"
                        android:layout_marginEnd="10dp"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="2"
                        android:ellipsize="end"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="3"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={vm.mOrientationIR}"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/field_face_orientation"
                        android:textSize="16sp"
                        android:layout_marginEnd="10dp"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="2"
                        android:ellipsize="end"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="3"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={vm.mDetectOrientationIR}"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/field_bitmap_orientation"
                        android:textSize="16sp"
                        android:layout_marginEnd="10dp"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="2"
                        android:ellipsize="end"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="3"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={vm.mRotateIR}"/>

                </LinearLayout>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:switchPadding="40dp"
                    android:text="@string/field_need_scale"
                    android:textColor="@color/dark_grey"
                    android:checked="@={vm.mIsNeedScaleIR}"/>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/ok_btn"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:text="OK"
                android:onClick="@{()->vm.saveSetting()}"/>

            <Button
                android:id="@+id/cancel_btn"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:text="Cancel"
                android:onClick="@{()->vm.cancelSetting()}"/>
        </LinearLayout>

    </LinearLayout>

</layout>
